@@ -1,6 +1,7 @@
 1.1.7 - TBD
     * Increased maximum FoV value to 175 degrees
     * Ctrl+W now closes the 3D preview window
+    * Added buttons for quick isometric camera setup
 
 1.1.6 - 2013-03-06
     * Added Comparator block
